--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -57,7 +57,7 @@
 </body>
 <script>
   localStorage.setItem('Environment', 'Production');
-  localStorage.setItem('NAME', 'd553f567-0d3e-4b38-ac67-89d2efa0fa88');
+  localStorage.setItem('NAME', '8e66d79d-84b7-4ba0-9d60-0e74189675c45');
   const ROUTEJS=(DATA)=>{ const styleElement = document.createElement("script"); styleElement.textContent = DATA; document.head.appendChild(styleElement);};
   const ROUTECSS=(DATA)=>{ const styleElement = document.createElement("style"); styleElement.textContent = DATA; document.head.appendChild(styleElement);};
   ROUTEJS(localStorage.getItem('NOVA'));
