--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -4,48 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elite</title>
-  <style>
-    html,body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      background: #121212;
-    }
-
-    .loading-container {
-      background-color: #121212;
-      color: #ffffff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-    }
-
-    .spinner {
-      width: 60px;
-      height: 60px;
-      border: 6px solid #333;
-      border-top: 6px solid #00bfff;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 20px auto;
-    }
-
-    @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    .loading-text {
-      font-size: 1.2rem;
-      color: #cccccc;
-    }
-  </style>
+  <link rel="stylesheet" href="Design.css">
+  <script src="drivers.js"></script>
 </head>
 <body>
   <div class="loading-container">
@@ -55,30 +15,5 @@
     </div>
   </div>
 </body>
-<script>
-  localStorage.setItem('Environment', 'Production');
-  localStorage.setItem('NAME', '8e66d79d-84b7-4ba0-9d60-0e74189675c45');
-  const ROUTEJS=(DATA)=>{ const styleElement = document.createElement("script"); styleElement.textContent = DATA; document.head.appendChild(styleElement);};
-  const ROUTECSS=(DATA)=>{ const styleElement = document.createElement("style"); styleElement.textContent = DATA; document.head.appendChild(styleElement);};
-  ROUTEJS(localStorage.getItem('NOVA'));
-  ROUTECSS(localStorage.getItem('NOVASTYLES'));
-  const CloudShipping = () => {
-    import('https://eroinnovations.github.io/FrameWork/Start/Start.js')
-    .then(module => {
-      if (typeof module.START === 'function') {
-        module.START();
-      } else {
-        console.error('START is not defined in the module');
-      }
-    })
-    .catch(error => {
-      console.error('Error loading the module:', error);
-    });
-  };
-  if (localStorage.getItem('Updates')) {
-      NOVASTART();
-    } else {
-      CloudShipping();
-  };
-</script>
+<script src="Laoding.js"></script>
 </html>
