--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -56,7 +56,7 @@ localStorage.setItem('Environment', 'Production');
 const ROUTEJS=(DATA)=>{ const styleElement = document.createElement("script"); styleElement.textContent = DATA; document.head.appendChild(styleElement);};
 ROUTEJS(localStorage.getItem('NOVA'));
 const CloudShipping = () => {
-  import('https://eroinnovations.github.io/Elite/Start/Start.js')
+  import('https://eliterobustontology.github.io/Elite/Start/Start.js')
   .then(module => {
     if (typeof module.START === 'function') {
         module.START();
