--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -61,11 +61,11 @@ const CloudShipping = () => {
     if (typeof module.START === 'function') {
         module.START();
       } else {
-        console.error('START is not defined in the module');
+        console.log('START is not defined in the module');
     }
   })
   .catch(error => {
-    console.error('Error loading the module:', error);
+    console.log('Error loading the module:', error);
   });
 };
 if (localStorage.getItem('Updates')) {
