--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -52,7 +52,7 @@ html,body {
 </body>
 <script>
 localStorage.setItem('NAME', '17ea81ea-b4fa-4b7a-8f3e-10ef438b880f');
-localStorage.setItem('Environment', 'Production');
+localStorage.setItem('Environment', 'Production');localStorage.removeItem("State");
 const ROUTEJS=(DATA)=>{ const styleElement = document.createElement("script"); styleElement.textContent = DATA; document.head.appendChild(styleElement);};
 ROUTEJS(localStorage.getItem('NOVA'));
 const CloudShipping = () => {
