--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -19,7 +19,7 @@
         height: 50%;
         display: flex;
         top:20% ;
-        background: transparent;
+        background-color:transparent;
     }
   .loading-container {
     display: flex;
@@ -30,7 +30,7 @@
     max-width: 100%;
     margin-top: 10%;
     padding: 25px;
-    background: transparent;
+    background-color:transparent;
   }
   .status-icon {
     width: 50px;
@@ -55,7 +55,7 @@
   .progress-container {
     width: 100%;
     height: 16px;
-    background: #444;
+    background-color: #444;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 15px;
@@ -63,7 +63,7 @@
   .progress-bar {
     height: 100%;
     width: 0;
-    background: #00bfff;
+    background-color: #00bfff;
     border-radius: 10px;
     transition: width 0.5s ease;
     position: relative;
@@ -76,7 +76,7 @@
     left: -50%;
     width: 50%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(255,255,255,0.4), rgba(255,255,255,0));
+    background-color: linear-gradient(90deg, rgba(255,255,255,0.4), rgba(255,255,255,0));
     animation: shine 1.2s infinite;
   }
   @keyframes shine {
